--- a/app.yaml
+++ b/app.yaml
@@ -6,12 +6,12 @@ threadsafe: yes
 
 handlers:
 - url: /favicon\.ico
-  static_files: static/favicon.ico
-  upload: static/favicon\.ico
+  static_files: public/favicon.ico
+  upload: public/favicon\.ico
 
 - url: /
-  static_files: static/index.html
-  upload: static/index.html
+  static_files: public/index.html
+  upload: public/index.html
 
-- url: /static
-  static_dir: static
+- url: /public
+  static_dir: public
