feat(gulp): add clean and clean-all targets in gulp

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "droneschoolscotland",
   "private": true,
   "devDependencies": {
+    "del": "^2.0.2",
     "gulp": "^3.9.0",
     "gulp-bower": "0.0.10"
   }
