--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "del": "^2.0.2",
     "gulp": "^3.9.0",
-    "gulp-bower": "0.0.10"
+    "gulp-bower": "0.0.10",
+    "gulp-less": "^3.0.3"
   }
 }
