chore(css): Generate sourcemaps

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "del": "^2.0.2",
     "gulp": "^3.9.0",
     "gulp-bower": "0.0.10",
-    "gulp-less": "^3.0.3"
+    "gulp-less": "^3.0.3",
+    "gulp-sourcemaps": "^1.6.0"
   }
 }
