--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gulp": "^3.9.0",
     "gulp-bower": "0.0.10",
     "gulp-less": "^3.0.3",
+    "gulp-minify-css": "^1.2.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.4.2"
